--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             position: absolute;
             top: 0;
             left: 0;
+            word-break: break-all;
+            white-space: break-spaces;
         }
     </style>
 </head>
@@ -44,7 +46,7 @@
     <img id="middle" />
     <canvas id="canvas"></canvas>
 
-    <div id="debug"></div>
+    <pre id="debug"></pre>
 
     <script src="main.js"></script>
 </body>
