--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     <pre id="debug"></pre>
 
+    <script src="noise.js"></script>
     <script src="main.js"></script>
     <script src="stars.js"></script>
 </body>
