Blurred stars, visualizer & logo shadow, bugfixes

--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 <body>
     <canvas id="starfield"></canvas>
 
-    <img id="middle" />
-    <canvas id="canvas"></canvas>
+    <div id="visualizer">
+        <img id="middle" />
+        <canvas id="canvas"></canvas>
+    </div>
 
     <pre id="debug"></pre>
 
